[gd_scene load_steps=10 format=3 uid="uid://b1x0cuqexagsr"]

[ext_resource type="Script" path="res://scenes/root.gd" id="1_djqkq"]
[ext_resource type="Texture2D" uid="uid://qyk77pakrphh" path="res://assets/textures/dev_art/background.png" id="2_ii7io"]
[ext_resource type="PackedScene" uid="uid://doli71bfmeej7" path="res://entites/global/settings_panel/settings_panel.tscn" id="5_jiurb"]
[ext_resource type="PackedScene" uid="uid://cd5gwotq82dtk" path="res://entites/global/volume_control/volume_control.tscn" id="5_ljgve"]
[ext_resource type="PackedScene" uid="uid://xpu07bjkfiy8" path="res://entites/global/navigation_bars/navigation_bars.tscn" id="5_wb84j"]
[ext_resource type="Script" path="res://utility/audio/audio_queuer.gd" id="6_6gusu"]
[ext_resource type="Script" path="res://entites/database_manager.gd" id="8_s0wf3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0kmvs"]
bg_color = Color(0, 0, 0, 0.607843)

[sub_resource type="LabelSettings" id="LabelSettings_1nf4q"]
font_size = 24

[node name="root" type="Control" groups=["Root"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_djqkq")

[node name="DatabaseManager" type="Node" parent="." groups=["DatabaseManager"]]
script = ExtResource("8_s0wf3")

[node name="Background" type="TextureRect" parent="."]
self_modulate = Color(0.501961, 0.501961, 0.501961, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ii7io")
expand_mode = 2
stretch_mode = 6

[node name="AudioQueuer" type="Node2D" parent="."]
script = ExtResource("6_6gusu")
audio_players = 10

[node name="Music" type="AudioStreamPlayer" parent="." groups=["RootMusic"]]
bus = &"Music"

[node name="NavigationBars" parent="." instance=ExtResource("5_wb84j")]
layout_mode = 1

[node name="SettingsPanel" parent="." instance=ExtResource("5_jiurb")]
visible = false
z_index = 4
layout_mode = 1

[node name="VolumeControl" parent="." instance=ExtResource("5_ljgve")]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -380.0
offset_bottom = -120.0
grow_vertical = 0

[node name="CornerInfo" type="PanelContainer" parent="."]
z_index = 5
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -157.0
offset_top = -181.0
offset_right = -8.0
offset_bottom = -108.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_0kmvs")

[node name="Label" type="Label" parent="CornerInfo"]
layout_mode = 2
text = "TaiClone v1.0
FPS: 100"
label_settings = SubResource("LabelSettings_1nf4q")
horizontal_alignment = 2
vertical_alignment = 2

[node name="BlackoutOverlay" type="ColorRect" parent="."]
visible = false
z_index = 999
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GridContainer" type="GridContainer" parent="."]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
columns = 5

[connection signal="finished" from="Music" to="." method="on_music_end"]
